Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "df.gorupby([df.Gender , df.Race)\n"
+    "df.gorupby(df.Gender)\n"
    ]
   },
   {
