--- a/index.ipynb
+++ b/index.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "Male      0.0       60317  22344627"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "Alaska  Female    NaN         2.0    679.975000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,19 +272,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-52048b49ce54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGender\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRace\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>State</th>\n",
+       "      <th>State Code</th>\n",
+       "      <th>Ten-Year Age Groups</th>\n",
+       "      <th>Ten-Year Age Groups Code</th>\n",
+       "      <th>Gender Code</th>\n",
+       "      <th>Race Code</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Crude Rate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Race</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Female</th>\n",
+       "      <th>American Indian or Alaska Native</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1002-5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>100285</td>\n",
+       "      <td>10.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Asian or Pacific Islander</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>A-PI</td>\n",
+       "      <td>10</td>\n",
+       "      <td>100371</td>\n",
+       "      <td>10.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Black or African American</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2054-5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>100170</td>\n",
+       "      <td>100.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>White</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1000704</td>\n",
+       "      <td>10.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Male</th>\n",
+       "      <th>American Indian or Alaska Native</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1002-5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>10000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Asian or Pacific Islander</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>A-PI</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1000019</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Black or African American</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2054-5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1000.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>White</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-4 years</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2106-3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1005401</td>\n",
+       "      <td>10.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Notes    State  State Code  \\\n",
+       "Gender Race                                                           \n",
+       "Female American Indian or Alaska Native    NaN  Alabama           1   \n",
+       "       Asian or Pacific Islander           NaN  Alabama           1   \n",
+       "       Black or African American           NaN  Alabama           1   \n",
+       "       White                               NaN  Alabama           1   \n",
+       "Male   American Indian or Alaska Native    NaN  Alabama           1   \n",
+       "       Asian or Pacific Islander           NaN  Alabama           1   \n",
+       "       Black or African American           NaN  Alabama           1   \n",
+       "       White                               NaN  Alabama           1   \n",
+       "\n",
+       "                                        Ten-Year Age Groups  \\\n",
+       "Gender Race                                                   \n",
+       "Female American Indian or Alaska Native           1-4 years   \n",
+       "       Asian or Pacific Islander                  1-4 years   \n",
+       "       Black or African American                  1-4 years   \n",
+       "       White                                      1-4 years   \n",
+       "Male   American Indian or Alaska Native           1-4 years   \n",
+       "       Asian or Pacific Islander                  1-4 years   \n",
+       "       Black or African American                  1-4 years   \n",
+       "       White                                      1-4 years   \n",
+       "\n",
+       "                                        Ten-Year Age Groups Code Gender Code  \\\n",
+       "Gender Race                                                                    \n",
+       "Female American Indian or Alaska Native                        1           F   \n",
+       "       Asian or Pacific Islander                               1           F   \n",
+       "       Black or African American                               1           F   \n",
+       "       White                                                   1           F   \n",
+       "Male   American Indian or Alaska Native                        1           M   \n",
+       "       Asian or Pacific Islander                               1           M   \n",
+       "       Black or African American                               1           M   \n",
+       "       White                                                   1           M   \n",
+       "\n",
+       "                                        Race Code  Deaths Population  \\\n",
+       "Gender Race                                                            \n",
+       "Female American Indian or Alaska Native    1002-5      10     100285   \n",
+       "       Asian or Pacific Islander             A-PI      10     100371   \n",
+       "       Black or African American           2054-5      10     100170   \n",
+       "       White                               2106-3      12    1000704   \n",
+       "Male   American Indian or Alaska Native    1002-5      10       1001   \n",
+       "       Asian or Pacific Islander             A-PI      10    1000019   \n",
+       "       Black or African American           2054-5      10       1000   \n",
+       "       White                               2106-3      10    1005401   \n",
+       "\n",
+       "                                        Crude Rate  \n",
+       "Gender Race                                         \n",
+       "Female American Indian or Alaska Native       10.4  \n",
+       "       Asian or Pacific Islander              10.1  \n",
+       "       Black or African American             100.3  \n",
+       "       White                                  10.1  \n",
+       "Male   American Indian or Alaska Native    10000.0  \n",
+       "       Asian or Pacific Islander              10.0  \n",
+       "       Black or African American            1000.4  \n",
+       "       White                                  10.6  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
