Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -518,7 +518,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "t = df"
    ]
   },
   {
