--- a/index.ipynb
+++ b/index.ipynb
@@ -661,7 +661,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "t = df.groupby(df.Deaths).sum().plot()"
+    "df.groupby(df.Deaths).sum().plot()"
    ]
   },
   {
