Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -800,7 +800,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "to_drop = None\n"
+    "to_drop = None\n",
+    "df = df['Population']"
    ]
   },
   {
