Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -819,8 +819,8 @@
    "source": [
     "#Your code here\n",
     "to_drop = None\n",
-    "c = (df['Population'] == 'Not Applicable') #bool valuea\n",
-    "c[1 : 8]"
+    "c = (df['Population'] == 'Not Applicable') #bool value\n",
+    "c[1:8]\n"
    ]
   },
   {
