--- a/index.ipynb
+++ b/index.ipynb
@@ -820,7 +820,7 @@
     "#Your code here\n",
     "to_drop = None\n",
     "c = (df['Population'] == 'Not Applicable') #bool value\n",
-    "c[1:8]\n"
+    "c.to_drop.index(axis = )\n"
    ]
   },
   {
