Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -816,7 +816,8 @@
     "to_drop = None\n",
     "c = (df['Population'] == 'Not Applicable') #bool value serie\n",
     "d = df.to_drop.index(axis = 0 , inplace = True)\n",
-    "d\n"
+    "ind_drop = df[df[['Population'] == 'Not Applicable'].apply(lambda x: x.startswith('Keyword'))].index\n",
+    "\n"
    ]
   },
   {
