Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -661,10 +661,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "df.groupby(df.Deaths).sum().plot()\n",
-    "df.groupby(['State'])['Deaths'].sum().sort_values().plot(kind='barh', figsize=(15,8))\n",
-    "plt.title('Total Deaths by State')\n",
-    "plt.xlabel(\"# of Deaths\")"
+    "df.groupby(df.Deaths).sum().plot()"
    ]
   },
   {
