--- a/index.ipynb
+++ b/index.ipynb
@@ -766,23 +766,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "sort_values() missing 1 required positional argument: 'by'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-9baf0daa5fc6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: sort_values() missing 1 required positional argument: 'by'"
-     ]
+     "data": {
+      "text/plain": [
+       "Not Applicable    75\n",
+       "907                2\n",
+       "860                2\n",
+       "5142               2\n",
+       "4412               2\n",
+       "Name: Population, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sort_values()"
+    "df.Population.value_counts()[:5]\n"
    ]
   },
   {
@@ -826,6 +830,10 @@
    ],
    "source": [
     "#Your code here\n",
+    "to_drop = df[df['Population'] == 'Not Applicable']\n",
+    "df.drop(to_drop.index, axis=0, inplace=True)\n",
+    "df.Population = df.Population.astype('int64')\n",
+    "print(df.Population.dtype)\n",
     "to_drop = None\n",
     "c = (df['Population'] == 'Not Applicable') #bool value serie\n",
     "d = df.to_drop.index(axis = 0 , inplace = True)\n",
