Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -834,8 +834,8 @@
     "df.drop(to_drop.index, axis=0, inplace=True)\n",
     "df.Population = df.Population.astype('int64')\n",
     "print(df.Population.dtype)\n",
-    "to_drop = None\n",
-    "c = (df['Population'] == 'Not Applicable') #bool value serie\n",
+    "\n",
+    "c = df['Population'] == 'Not Applicable' #bool value serie\n",
     "d = df.to_drop.index(axis = 0 , inplace = True)\n",
     "ind_drop = df[df['Population'] == 'Not Applicable'].apply(lambda x: x.astype('int64')).to_drop.index\n",
     "\n"
