Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -848,7 +848,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "plt.barchar"
    ]
   },
   {
