Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -898,24 +898,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.core.groupby.groupby.DataFrameGroupBy object at 0x7f2f9f8e1898>"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# A sample groupby similar to above. \n",
-    "grouped = df.groupby(['State', 'Gender'])\n",
-    "grouped[pd.D]"
+    "grouped = df.groupby([])"
    ]
   },
   {
