--- a/index.ipynb
+++ b/index.ipynb
@@ -916,7 +916,7 @@
    "source": [
     "# A sample groupby similar to above. \n",
     "grouped = df.groupby(['State', 'Gender'])\n",
-    "m = grouped[pd['Death' , 'Population']].agg()"
+    "m = (grouped)[pd['Death' , 'Population']].agg()"
    ]
   },
   {
