Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1438,26 +1438,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['index', 'Notes', 'State', 'State Code', 'Ten-Year Age Groups',\n",
-       "       'Ten-Year Age Groups Code', 'Gender', 'Gender Code', 'Race',\n",
-       "       'Race Code', 'Deaths', 'Population', 'Crude Rate'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Notice that this causes columns to be MultiIndexed!\n",
-    "grouped.columns"
+    "#Notice that this causes columns to be MultiIndexed!\n"
    ]
   },
   {
