Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1457,7 +1457,7 @@
    ],
    "source": [
     "#Notice that this causes columns to be MultiIndexed!\n",
-    "grouped.columns"
+    "grouped.columns\n"
    ]
   },
   {
