Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1560,11 +1560,7 @@
     "#demonstrates using a conditional within a list comprehension.\n",
     "#This simpler version works but has some tail underscores where col1 is blank:\n",
     "#grouped.columns = [col0 + '_' + col1 for col0, col1 in list(zip(cols0, cols1))]\n",
-    "grouped.columns\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "grouped.columns"
    ]
   },
   {
@@ -1578,150 +1574,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Deaths_mean</th>\n",
-       "      <th>Deaths_min</th>\n",
-       "      <th>Deaths_max</th>\n",
-       "      <th>Deaths_std</th>\n",
-       "      <th>Population_mean</th>\n",
-       "      <th>Population_min</th>\n",
-       "      <th>Population_max</th>\n",
-       "      <th>Population_std</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>State</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Alabama</th>\n",
-       "      <th>Female</th>\n",
-       "      <td>10753.325000</td>\n",
-       "      <td>10</td>\n",
-       "      <td>116297</td>\n",
-       "      <td>24612.250487</td>\n",
-       "      <td>1.078713e+06</td>\n",
-       "      <td>2087</td>\n",
-       "      <td>4334752</td>\n",
-       "      <td>1.400309e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>10765.850000</td>\n",
-       "      <td>10</td>\n",
-       "      <td>88930</td>\n",
-       "      <td>20813.538537</td>\n",
-       "      <td>1.014946e+06</td>\n",
-       "      <td>1129</td>\n",
-       "      <td>4284775</td>\n",
-       "      <td>1.397830e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Alaska</th>\n",
-       "      <th>Female</th>\n",
-       "      <td>679.975000</td>\n",
-       "      <td>13</td>\n",
-       "      <td>4727</td>\n",
-       "      <td>1154.870455</td>\n",
-       "      <td>1.440403e+05</td>\n",
-       "      <td>1224</td>\n",
-       "      <td>682855</td>\n",
-       "      <td>2.015793e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>860.357143</td>\n",
-       "      <td>12</td>\n",
-       "      <td>5185</td>\n",
-       "      <td>1411.777392</td>\n",
-       "      <td>1.518884e+05</td>\n",
-       "      <td>578</td>\n",
-       "      <td>770502</td>\n",
-       "      <td>2.238843e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Arizona</th>\n",
-       "      <th>Female</th>\n",
-       "      <td>8998.386364</td>\n",
-       "      <td>21</td>\n",
-       "      <td>133923</td>\n",
-       "      <td>26245.941003</td>\n",
-       "      <td>1.246502e+06</td>\n",
-       "      <td>12211</td>\n",
-       "      <td>6265346</td>\n",
-       "      <td>2.096632e+06</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Deaths_mean  Deaths_min  Deaths_max    Deaths_std  \\\n",
-       "State   Gender                                                       \n",
-       "Alabama Female  10753.325000          10      116297  24612.250487   \n",
-       "        Male    10765.850000          10       88930  20813.538537   \n",
-       "Alaska  Female    679.975000          13        4727   1154.870455   \n",
-       "        Male      860.357143          12        5185   1411.777392   \n",
-       "Arizona Female   8998.386364          21      133923  26245.941003   \n",
-       "\n",
-       "                Population_mean  Population_min  Population_max  \\\n",
-       "State   Gender                                                    \n",
-       "Alabama Female     1.078713e+06            2087         4334752   \n",
-       "        Male       1.014946e+06            1129         4284775   \n",
-       "Alaska  Female     1.440403e+05            1224          682855   \n",
-       "        Male       1.518884e+05             578          770502   \n",
-       "Arizona Female     1.246502e+06           12211         6265346   \n",
-       "\n",
-       "                Population_std  \n",
-       "State   Gender                  \n",
-       "Alabama Female    1.400309e+06  \n",
-       "        Male      1.397830e+06  \n",
-       "Alaska  Female    2.015793e+05  \n",
-       "        Male      2.238843e+05  \n",
-       "Arizona Female    2.096632e+06  "
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grouped.head()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
