Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1766,8 +1766,7 @@
    ],
    "source": [
     "# Now it's time to pivot!\n",
-    "pivot = df.pivot()\n",
-    "pivot.head()"
+    "pivot = df.pivot(index = 'State', columns = 'Gender',values = 'Dea')\n"
    ]
   },
   {
